# medbro-demo

./: .cursorrules  .gitignore  AGENTS.md  Makefile  example.env  main.py  main_streaming.py  pyproject.toml
app/core/: interfaces.py  models.py
app/services/: llm.py  session.py  session_streaming.py  stt.py  tts.py
app/ui/: gradio_app.py  gradio_app_streaming.py
config/: criteria.yaml  logger.py  prompts.py  settings.py
scripts/: generate_sample_audio.py
